--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgElevatezoomPlus</title>
+  <title>Angular Elevatezoom Plus</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <script src="https://cdn.staticfile.org/jquery/3.4.0/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/igorlino/elevatezoom-plus@1.2.3/src/jquery.ez-plus.js"></script>
+  <script src="https://cdn.staticfile.org/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/igorlino/elevatezoom-plus@1.2.5/src/jquery.ez-plus.js"></script>
 </head>
 <body>
   <app-root></app-root>
